<resources>
    <string name="app_name">TrackFit2</string>
    <string name="app_welcome">Welcome to FitTrack!</string>
    <string name="motivation_text">Start Your Fitness Journey Today!</string>
    <string name="get_started">Get started</string>
    <string name="confirm">Confirm</string>
    <string name="trackfit">Trackfit</string>
    <string name="steps_of_the_day">Steps taken today</string>
    <string name="calories_burned">Calories burned</string>
    <string name="active_time">Active time</string>
    <string name="set_goal">Set Goal</string>
    <string name="daily_step_goal">Daily step goal</string>
    <string name="daily_caloric_goal">Daily caloric goal(kcal)</string>
    <string name="daily_activity_time_goal">Daily activity time goal(min)</string>
    <string name="save">Save</string>
    <string name="add_data">Add Data</string>
    <string name="steps">Steps</string>
    <string name="active_min">Active minutes</string>
    <string name="progress">Progress</string>
    <string name="active_duration">Active duration</string>
    <string name="monthly_progress">Monthly Progress</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="units">Units</string>
    <string name="logout">Logout</string>
    <string name="enter_height_hint">Enter height</string>
    <string name="weihgt">Weight (kg)</string>
    <string name="enter_weight_hint">Enter weight</string>
    <string name="Hieght_input">Height (cm)</string>
    <string name="Gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="save_profile">Save Profile</string>
    <string name="set_daily_goals">Set Your Daily Goals</string>
    <string name="full_name">Full name</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="no_account_yet_register">No account yet? Register</string>
    <string name="erase_all_data">Erase All Data</string>
    <string name="daily_progress">Daily Progress</string>
    <string name="log_your_activity_to_stay_on_track">Log your activity to stay on track</string>
    <string name="steps_taken">Steps Taken</string>
    <string name="e_g_8000">e.g. 8000</string>
    <string name="calories_burned_kcal">Calories Burned (kcal)</string>
    <string name="e_g_450">e.g. 450</string>
    <string name="active_time_minutes">Active Time (minutes)</string>
    <string name="e_g_45">e.g. 45</string>
    <string name="save_today_s_data">Save Today\'s Data</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="set_time_8_00_pm">Set Time (8:00 PM)</string>
    <string name="welcome_back_please_sign_in">Welcome back, please sign in</string>
    <string name="cancel">Cancel</string>
    <string name="your_data_will_be_saved_and_you_can_log_back_in_anytime">Your data will be saved and you can log back in anytime.</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="login_here">Login here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="join_us_to_start_your_fitness_journey">Join us to start your fitness journey</string>
    <string name="create_account">Create Account</string>
</resources>