<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:orientation="vertical">





    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_welcome"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp" />

    <!-- Subtitle Text -->
    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motivation_text"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_below="@id/welcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <!-- Get Started Button -->
    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textSize="18sp"
        android:backgroundTint="@color/purple_500"
        android:textColor="@android:color/white"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/subtitleText"
        android:layout_marginTop="32dp" />

</RelativeLayout>